[package]
name = "flashroute_rs"
version = "0.1.0"
authors = [
    "Bugen Zhao <i@bugenzhao.com>",
    "Zhengdong Wang <lnwzd2009@sjtu.edu.cn>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
pnet = "0.27"
pnet_sys = "0.27"
structopt = "0.3"
ipnet = "2.3"
log = "0.4"
env_logger = "0.8"
lazy_static = "1.4"
tokio = { version = "0.3", features = ["full"] }
rand = "0.7"
