[package]
name = "flashroute_rs"
description = "A reproduction and enhancement of `FlashRoute: Efficient Traceroute on a Massive Scale (ACM IMC'20)` in Rust."
version = "0.2.5"
authors = [
    "Bugen Zhao <i@bugenzhao.com>",
    "Zhengdong Wang <lnwzd2009@sjtu.edu.cn>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
pnet = "0.27"
pnet_sys = "0.27"
structopt = "0.3"
ipnet = "2.3"
log = { version = "0.4", features = ["release_max_level_info"] }
env_logger = "0.8"
lazy_static = "1.4"
tokio = { version = "0.3", features = ["full"] }
rand = "0.7"
petgraph = "0.5"
hashbrown = "0.9"
pbr = "1.0"

[target.'cfg(unix)'.dependencies]
sudo = "0.5"
